@@ -1,0 +1,56 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!--
+
+ OpenRemote, the Home of the Digital Home.
+ Copyright 2008-2012, OpenRemote Inc.
+
+ See the contributors.txt file in the distribution for a
+ full listing of individual contributors.
+
+ This is free software; you can redistribute it and/or modify it
+ under the terms of the GNU General Public License as
+ published by the Free Software Foundation; either version 3.0 of
+ the License, or (at your option) any later version.
+
+ This software is distributed in the hope that it will be useful,
+ but WITHOUT ANY WARRANTY; without even the implied warranty of
+ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
+
+ You should have received a copy of the GNU General Public
+ License along with this software; if not, write to the Free
+ Software Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA
+ 02110-1301 USA, or see the FSF site: http://www.fsf.org.
+
+-->
+
+<!--
+  Music Player Daemon protocol
+
+  Author: Marcus Redeker
+-->
+<openremote xmlns = "http://www.openremote.org" 
+            xmlns:xsi = "http://www.w3.org/2001/XMLSchema-instance"
+	    xsi:schemaLocation = "http://www.openremote.org protocol.xsd">
+
+  <protocol displayName="MPD Protocol" tagName="mpd">
+
+    <attr name="ipAddress" label="IPAddress" tooltipMessage="IP address of the machine where MPD is running">
+      <validations>
+        <allowBlank>false</allowBlank>
+      </validations>
+    </attr>
+
+    <attr name="port" label="Port" tooltipMessage="Port to connect to MPD instance">
+      <validations>
+        <allowBlank>false</allowBlank>
+      </validations>
+    </attr>
+
+    <attr name="command" label="MPD Command" tooltipMessage = "A MPD command as defined in MpdCmdEnum">
+      <validations>
+        <allowBlank>false</allowBlank>
+      </validations>
+    </attr>
+
+  </protocol>
+</openremote>
